--- a/css/header.css
+++ b/css/header.css
@@ -81,7 +81,7 @@
     text-decoration: none;
     color: black;
     border: none;
-    animation: 0.5s ease-in-out;
+    transition: opacity 0.5s ease-in-out;
 }
 
 .header__link:hover {
